<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/rel_title"
                android:layout_width="fill_parent"
                android:layout_height="60dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:id="@+id/img_back"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/back_btn" />

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_place_description"
                    android:textColor="#000000"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    tools:ignore="SpUsage" />
            </RelativeLayout>

            <ImageView
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:id="@+id/imageViewOne"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_place_description"
                android:layout_margin="16dp"
                android:textSize="24sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:id="@+id/textViewDesc"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="24sp"
                android:text="@string/title_how_to_go"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:id="@+id/textViewHowToGo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="24sp"
                android:textAlignment="viewStart"
                android:text="@string/title_images_places"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/imageViewTwo"
                android:scaleType="centerCrop"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="16dp"
                android:id="@+id/imageViewThree"
                android:scaleType="centerCrop"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_google_map"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/googleMapButton"
                android:textSize="24sp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>