<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="vertical"
    android:padding="10dp"

    android:gravity="top"
    android:id="@+id/ll">
    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="fill_parent"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:id="@+id/img_back"
            android:layout_marginStart="16dp"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            tools:ignore="SpUsage"
            android:text="@string/title_head"
            android:textAlignment="center"
            android:layout_margin="16dp"
            android:id="@+id/title_text"
            android:textStyle="bold"
            android:textColor="#000000"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardBackgroundColor="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="340dp"
                android:layout_height="280dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:id="@+id/touristPlaces"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="174dp"
                        android:layout_height="174dp"
                        android:src="@drawable/ic_place_black_24dp"
                        android:padding="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_places"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardBackgroundColor="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:id="@+id/hotelList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:src="@drawable/ic_hotels_blue"
                    android:padding="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_hotel"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardBackgroundColor="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:id="@+id/transportation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:src="@drawable/ic_transportation"
                    android:padding="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_transportation"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardBackgroundColor="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/bankcardId"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:id="@+id/touroperators"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:src="@drawable/ic_touroperators"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_tour_operators"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardBackgroundColor="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/bankingUs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:src="@drawable/ic_bank_green_24dp"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_banks"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardBackgroundColor="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="340dp"
                android:layout_height="150dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/securityservice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_police_gold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/title_security_services"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardBackgroundColor="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="340dp"
                android:layout_height="150dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/hospitalDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_hospital_red" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/title_hospital"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardBackgroundColor="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="340dp"
            android:layout_height="150dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:id="@+id/aboutUs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:src="@drawable/ic_web_black_24dp"
                    android:padding="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_about_us"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
