<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seurityservices.SecurityServices">
    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="fill_parent"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:id="@+id/img_back"
            android:layout_marginStart="16dp"
            android:src="@drawable/back_btn" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_security_services"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/rel_title">



        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardBackgroundColor="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:id="@+id/policestation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:src="@drawable/ic_police"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_police"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardBackgroundColor="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:id="@+id/rab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:src="@drawable/ic_police"
                        android:padding="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_rab"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardBackgroundColor="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/bankcardId"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:id="@+id/coast"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:src="@drawable/ic_police"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_coast_guard"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardBackgroundColor="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/forestdefence"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:src="@drawable/ic_police"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_forest_defence"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>